; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_process_32.c_cpu_idle.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_process_32.c_cpu_idle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@TS_POLLING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cpu_idle() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @smp_processor_id()
  store i32 %2, i32* %1, align 4
  %3 = call i32 (...) @boot_init_stack_canary()
  %4 = load i32, i32* @TS_POLLING, align 4
  %5 = call %struct.TYPE_2__* (...) @current_thread_info()
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = or i32 %7, %4
  store i32 %8, i32* %6, align 4
  br label %9

9:                                                ; preds = %0, %28
  %10 = call i32 @tick_nohz_stop_sched_tick(i32 1)
  br label %11

11:                                               ; preds = %23, %9
  %12 = call i32 (...) @need_resched()
  %13 = icmp ne i32 %12, 0
  %14 = xor i1 %13, true
  br i1 %14, label %15, label %28

15:                                               ; preds = %11
  %16 = call i32 (...) @check_pgt_cache()
  %17 = call i32 (...) @rmb()
  %18 = load i32, i32* %1, align 4
  %19 = call i64 @cpu_is_offline(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = call i32 (...) @play_dead()
  br label %23

23:                                               ; preds = %21, %15
  %24 = call i32 (...) @local_irq_disable()
  %25 = call i32 (...) @stop_critical_timings()
  %26 = call i32 (...) @pm_idle()
  %27 = call i32 (...) @start_critical_timings()
  br label %11

28:                                               ; preds = %11
  %29 = call i32 (...) @tick_nohz_restart_sched_tick()
  %30 = call i32 (...) @preempt_enable_no_resched()
  %31 = call i32 (...) @schedule()
  %32 = call i32 (...) @preempt_disable()
  br label %9
}

declare dso_local i32 @smp_processor_id(...) #1

declare dso_local i32 @boot_init_stack_canary(...) #1

declare dso_local %struct.TYPE_2__* @current_thread_info(...) #1

declare dso_local i32 @tick_nohz_stop_sched_tick(i32) #1

declare dso_local i32 @need_resched(...) #1

declare dso_local i32 @check_pgt_cache(...) #1

declare dso_local i32 @rmb(...) #1

declare dso_local i64 @cpu_is_offline(i32) #1

declare dso_local i32 @play_dead(...) #1

declare dso_local i32 @local_irq_disable(...) #1

declare dso_local i32 @stop_critical_timings(...) #1

declare dso_local i32 @pm_idle(...) #1

declare dso_local i32 @start_critical_timings(...) #1

declare dso_local i32 @tick_nohz_restart_sched_tick(...) #1

declare dso_local i32 @preempt_enable_no_resched(...) #1

declare dso_local i32 @schedule(...) #1

declare dso_local i32 @preempt_disable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
